--- a/programmers/tskim/Momentum/index.css
+++ b/programmers/tskim/Momentum/index.css
@@ -1,42 +1,73 @@
 body {
-    background-color: #2c3e50;
-  }
+  background-color: #2c3e50;
+}
   
-  .btn {
-    cursor: pointer;
-  }
-  body {
-    color: #34495e;
-  }
+.btn {
+  cursor: pointer;
+}
+
+body {
+  color: #34495e;
+}
+
+.clickedToDo{
+  background: #888;
+  color: #fff;
+  text-decoration: line-through;
+}
   
-  .clicked {
-    color: #7f8c8d;
-  }
+.clicked {
+  color: #7f8c8d;
+}
   
-  .form,
-  .greetings {
-    display: none;
-  }
+.form,
+.greetings {
+  display: none;
+}
   
-  .showing {
-    display: block;
-  }
+.showing {
+  display: block;
+}
+
+.top-row{
+  /* position:absolute; */
+}
+
+.top-right{
+  float: right;
+  background-color: rgba(208, 201, 233, 0.5);
+}
   
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
+  to {
+    opacity: 1;
+  }
+}
   
-  .bgImage {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    animation: fadeIn 0.5s linear;
-  }
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 0.5s linear;
+}
+
+/* ======== Calendar ======== */
+.js-calendar {
+  width: 170px;
+  margin: 30px;
+  padding: 20px 20px 10px;
+  text-align: center;
+  font-weight: 800;
+  border: 1px solid #ddd;
+  cursor: default;
+}
+
+.cal-head {
+  width: 170px;
+}
